Maven, minor: fix classpath url generation #97